test/errors/i64_mul_overflow.luv
# RET: 1
# ERR: {self}:5:36:    x = 0x4000_0000_0000_0000i64 * 2
# ERR: {ssss}                                         ^ error: 4611686018427387904 multiplied by 2 overflows.
def int main():
    x = 0x4000_0000_0000_0000i64 * 2
--------------------------------------------------------------------------------
!
